--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@typescript-eslint/parser": "^8.11.0",
     "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
-    "prettier": "^3.3.3",
     "globals": "^15.11.0",
+    "prettier": "^3.3.3",
     "typescript": "^5.6.3",
-    "typescript-eslint": "^8.11.0"
+    "typescript-eslint": "^8.11.0",
+    "dotenv": "^16.4.5",
+    "vitest": "^2.1.3"
   }
 }
