--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@eslint/eslintrc": "^3.1.0",
     "@types/eslint": "^9.6.0",
     "@types/node": "^22.8.1",
+    "@types/yargs": "^17.0.33",
     "@typescript-eslint/parser": "^8.11.0",
     "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
@@ -28,7 +29,10 @@
     "prettier": "^3.3.3",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.11.0",
-    "dotenv": "^16.4.5",
+    "yargs": "^17.7.2",
     "vitest": "^2.1.3"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5"
   }
 }
