--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,27 @@
 {
   "compilerOptions": {
-    "target": "esnext" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
-    "module": "nodenext" /* Specify what module code is generated. */,
-    "moduleResolution": "nodenext",
+    "target": "ESnext" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
+    "module": "NodeNext" /* Specify what module code is generated. */,
+    "moduleResolution": "NodeNext",
     "esModuleInterop": true /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */,
     "allowSyntheticDefaultImports": true,
-    "baseUrl": ".",
     "outDir": "dist",
-    "noImplicitAny": true,
-    "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
 
     "strict": true /* Enable all strict type-checking options. */,
-    "skipLibCheck": true /* Skip type checking all .d.ts files. */
+    "skipLibCheck": true /* Skip type checking all .d.ts files. */,
+    "types": ["jest", "node", "@types/jest"],
+    "sourceMap": true
   },
-  "include": [
-      "./src/**/*",
-  ],
-  "exclude": [
-      "./src/**/*.test.ts",
-  ],
+  // "ts-node": {
+  //   "transpileOnly": true,
+  //   "files": true,
+  //   "compilerOptions": {
+  //     "rootDir": "."
+  //   }
+  // },
+  "ts-node": {
+    "esm": true,
+    "experimentalSpecifierResolution": "node"
+  },
+  "include": ["src/**/*"]
 }
