--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "yargs": "^17.7.2"
   },
   "dependencies": {
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "open": "^10.1.0"
   }
 }
