--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "note": "node --experimental-strip-types ./src/index.ts",
-    "kindle": "node --experimental-strip-types ./src/prettify-kindle-notes.ts",
+    "kindle": "node --experimental-strip-types ./src/store-kindle-notes.ts",
     "rm-dist": "rm -rf ./dist",
     "link-ts": "pnpm run rm-dist && tsc && pnpm link --global",
     "test2": "node --no-warnings --experimental-vm-modules ./node_modules/.bin/jest",
