--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@typescript-eslint/parser": "^8.11.0",
     "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
+    "@types/eslint-config-prettier": "^6.11.3",
     "globals": "^15.11.0",
     "jest": "^29.7.0",
     "prettier": "^3.3.3",
