--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "kindle": "node --experimental-strip-types ./src/store-kindle-notes.ts",
     "rm-dist": "rm -rf ./dist",
     "link-ts": "pnpm run rm-dist && tsc && pnpm link --global",
-    "test2": "node --no-warnings --experimental-vm-modules ./node_modules/.bin/jest",
-    "test": "NODE_OPTIONS=--experimental-vm-modules pnpm exec jest --config ./jest.config.ts",
+    "test": "vitest",
+    "test-old-jest": "NODE_OPTIONS=--experimental-vm-modules pnpm exec jest --config ./jest.config.ts",
     "test:command": "NODE_OPTIONS=--experimental-vm-modules pnpm exec jest -t 'command' --config ./jest.config.ts",
     "test:watch": "jest --watch",
     "indent:check": "prettier . --check",
@@ -23,13 +23,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.26.0",
-    "@babel/preset-env": "^7.26.0",
-    "@babel/preset-typescript": "^7.26.0",
     "@eslint/eslintrc": "^3.1.0",
-    "@jest/globals": "^29.7.0",
     "@types/eslint": "^9.6.0",
-    "@types/jest": "^29.5.14",
     "@types/node": "^22.8.1",
     "@types/yargs": "^17.0.33",
     "@typescript-eslint/parser": "^8.11.0",
@@ -37,12 +32,10 @@
     "eslint-config-prettier": "^9.1.0",
     "@types/eslint-config-prettier": "^6.11.3",
     "globals": "^15.11.0",
-    "jest": "^29.7.0",
     "prettier": "^3.3.3",
-    "ts-jest": "^29.2.5",
-    "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.11.0",
+    "vitest": "^2.1.4",
     "yargs": "^17.7.2"
   },
   "dependencies": {
